finish dynamic image

--- a/harry-potter/public/index.html
+++ b/harry-potter/public/index.html
@@ -16,7 +16,7 @@
       continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- <iframe src="./Harry Potter Theme Song.mp3" allow="autoplay" style="display:none" id="iframeAudio"> -->
+  <iframe src="./Harry Potter Theme Song.mp3" allow="autoplay" style="display:none" id="iframeAudio">
   </iframe>
   <!-- built files will be auto injected -->
 </body>
